crates/djls-python/tests/snapshots/corpus__repos__pretix__src__pretix__control__templatetags__getitem.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.pretix.control.templatetags.getitem::filter::getitem":
    expects_arg: true
    arg_optional: false
block_specs: {}
